tests-integration/tests/roundtrip/invalid/semantic_errors/invalid_integer_domain_02/invaid_integer_domain_02.essence
find x : int(0..-1, 5..4)